[package]
name = "enject"
version = "0.1.1"
description = "krunker"
edition = "2021"
authors = ["slav"]

[lib]
name = "electron"
path = "src/lib.rs"
crate-type = ["cdylib"]

[profile.dev]
incremental = true

[dependencies]
windows =  { version = "0.59.*", features = [
       "Win32_System_LibraryLoader",
       "Win32_System_Threading",
       "Win32_Foundation",
       "Win32_System_Diagnostics_ToolHelp",
       "Win32_System_Memory",
       "Win32_System_Diagnostics_Debug",
       "Win32_Security",
       "Win32_System_SystemServices",
       "Win32_UI_WindowsAndMessaging"
], default-features = false }

[build-dependencies]
winres = "0.1.*"
